# rust-il2-utils

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  tests.rs  win32.rs
src/cache/: mod.rs  tests.rs
src/fs/: mod.rs
src/fs/shared/: mod.rs  tests.rs
src/mem/: mod.rs  tests.rs
src/mem/impl_default/: mod.rs  tests.rs
src/mem/impl_linux/: mod.rs  tests.rs
src/mem/impl_win32/: mod.rs  tests.rs
src/simple_serialization/: mod.rs  tests.rs
src/time/: mod.rs  tests.rs
src/vec/: mod.rs  tests.rs
