[package]
name = "il2_utils"
version = "0.1.0"
edition = "2018"

[dependencies]
libc = "0.2.98"
chrono = "0.4.19"
rand = {version = "0.7.3", features = ["std", "getrandom"]}
# Secure cleanup for byte arrays
zeroize = "1.3.0"
# File locking
fd-lock = "3.0.0"

[target.'cfg(windows)'.dependencies]
windows = "0.18.0"

[target.'cfg(windows)'.build-dependencies]
windows = "0.18.0"

[dev-dependencies]
il2-test-utils={ git = "https://github.com/interlockledger/rust-il2-test-utils.git" }