[package]
name = "il2-utils"
version = "0.1.2"
edition = "2018"
description = "InterlockLedger's utility library in Rust."
authors = ["InterlockLedger Network", "Fabio Jun Takada Chino", "Cesar Luiz Ferracin"]
homepage = "https://github.com/interlockledger/rust-il2-utils"
license = "BSD-3-Clause"
keywords = ["interlockledger", "blockchain"]
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/interlockledger/rust-il2-utils"
readme = "README.md"

[dependencies]
libc = "0.2.98"
chrono = "0.4.19"
rand = {version = "0.7.3", features = ["std", "getrandom"]}
# Secure cleanup for byte arrays
zeroize = "1.3.0"
# File locking
fd-lock = "3.0.0"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.32.0", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"]}

[target.'cfg(windows)'.build-dependencies]
windows = "0.32.0"

[dev-dependencies]
il2-test-utils = "0.1.1"